social media day version maked

--- a/style.css
+++ b/style.css
@@ -826,6 +826,21 @@ body.day .contact-form .submit input {
     transform: rotate(360deg);
 }
 
+body.day .social-media i {
+    color: #000;
+    transition: all .2s ease-in;
+    opacity: .7;
+}
+
+body.day .social-media i:hover {
+    background: #000;
+    border-radius: 5px;
+    color: #fff;
+    transform: rotate(360deg);
+    opacity: .7;
+}
+
+
 /* footer */
 
 footer {
